# sigpac-dash-app

./: LICENSE  README.md  gitignore  main.py  pyproject.toml  requirements.txt
assets/: style.css
components/: shell.py
pages/: home.py  page1_codigos.py  page2_bbox.py  page3_atom.py
utils/: geo_utils.py  municipios_data.py  sigpac_api.py  sigpac_atom.py
