[project]
name = "sigpac-dash-app"
version = "0.1.0"
description = "Sigpac downloader dash app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "dash-iconify>=0.1.2",
    "dash-leaflet>=1.1.3",
    "dash-mantine-components>=2.3.0",
    "geopandas>=1.1.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
]
